syntax = "proto3";

option csharp_namespace = "ClientService";

package BusinessCardApi;

service ClientGrpc {
    rpc AddClientGrpc(AddClientGrpcCommand) returns (ClientGrpcCommandResult) {}
    rpc EditClientGrpc(EditClientGrpcCommand) returns (ClientGrpcCommandResult) {}
    rpc AddMemberGrpc(AddMemberGrpcCommand) returns (ClientGrpcCommandResult){}
    rpc GetClientsGrpc(GetClientGrpcQuery) returns (GetClientGrpcQueryResult){}
}

message AddClientGrpcCommand {
    string companyName = 1;
    bool isDiscreet = 2;
    int32 subscription = 3;
}

message EditClientGrpcCommand {
    string id = 1;
    string companyName = 2;
    bool isDiscreet = 3;
    int32 subscription = 4;
}

message AddMemberGrpcCommand {
    string firstName = 1;
    string lastName = 2;
    string middleName = 3;
    string nameSuffix = 4;
    string phoneNumber = 5;
    string email = 6;
    string address = 7;
    string occupation = 8;
    string facebook = 9;
    string linkedIn = 10;
    string instagram = 11;
    string pinterest = 12;
    string twitter = 13;
    string clientId = 14;
}


message ClientGrpcCommandResult {
    string id = 1;
}

message GetClientGrpcQuery {
    int32 pageSize = 1;
    int32 pageNumber = 2;
    string name = 3;
}

message GetClientGrpcQueryResult {
    int32 pageSize = 1;
    int32 pageNumber = 2;
    int32 totalCount = 3;
    repeated ClientResult clients = 4;
}

message ClientResult {
    string id = 1;
    string companyName = 2;
    bool isDiscreet = 3;
    int32 subscriptionLevel = 4;
    int32 cardHolders = 5;
    int32 nonCardHolders = 6;
    string createdBy = 7;
    string modifiedBy = 8;
    string createdOn = 9;
    string modifiedOn = 10;
    string cardId = 11;
    string cardKey = 12;
    string subscription = 13;
    bool isActive = 14;
}